--- a/systemd-journal-exporter/station-exporter.service
+++ b/systemd-journal-exporter/station-exporter.service
@@ -1,11 +1,16 @@
+# /etc/systemd/system/station-exporter.service
 [Unit]
 Description=station exporter
-After=network.target
+After=network.target systemd-journald.service
+Requires=systemd-journald.service
 
 [Service]
 ExecStart=/opt/station-exporter.py
 Type=simple
 PIDFile=/run/station-exporter.pid
+Restart=on-failure
+RestartSec=15
+Nice=5
 
 [Install]
 WantedBy=default.target
